WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
261367
[visionOS] Audio does not spatialize correctly with multiple windows after switching tabs
https://bugs.webkit.org/show_bug.cgi?id=261367
Summary
[visionOS] Audio does not spatialize correctly with multiple windows after sw...
Mike Wyrzykowski
Reported
2023-09-08 20:57:18 PDT
[visionOS] Audio does not spatialize correctly with multiple windows after switching tabs
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-09-08 21:03:17 PDT
radar://114060722
Mike Wyrzykowski
Comment 2
2023-09-08 21:04:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17621
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug